@@ -1,3 +1,7 @@
+2005-11-08 Kimmo
+ PATCH: [ 1350794 ] Manual: Update About doc chapter
+  Manual: About_Doc.xml
+
 2005-11-01 Kimmo
  PATCH: [ 1344213 ] Manual: typo fixes for Configuration part
   Manual: Configuration.xml
